k8s/keybuzz-client-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keybuzz-client-prod
  labels:
    environment: production
    app.kubernetes.io/part-of: keybuzz
